// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`credentials reducer reset credentials 1`] = `
Object {
  "spotifyAccessToken": null,
  "user": null,
}
`;

exports[`credentials reducer save spotify access token 1`] = `
Object {
  "spotifyAccessToken": "Test",
}
`;

exports[`credentials reducer save user 1`] = `
Object {
  "user": "Test",
}
`;

exports[`credentials reducer should return the initial state 1`] = `
Object {
  "spotifyAccessToken": null,
  "user": null,
}
`;
